<resources>
    <string name="activity_settings">Settings</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_log_in">Log in</string>
    <string name="button_explore">Preview</string>
    <string name="button_edit_showreal">Edit Showreal</string>
    <string name="onboarding_title_1">Create your ShowReal</string>
    <string name="onboarding_title_2">Real Review</string>
    <string name="onboarding_title_3">Real Potential</string>
    <string name="onboarding_title_4">Real Messages</string>
    <string name="onboarding_text_1">Don’t be daunted by creating a video. Answer a number of short questions and we will edit them together to create your ShowReal. Then, fill in your profile and preferences to get started.</string>
    <string name="onboarding_text_2">Review users that match your search criteria or where you match theirs.  Decide if you would like to Keep them, Cut them or give them a 2nd Chance to redo their ShowReal.  Users can only chat when both have clicked Keep.</string>
    <string name="onboarding_text_3">You always know where you stand. Your Real Potential list will contain the users you have kept, who haven’t reviewed you yet. They will move to your Real Messages list if they Keep you back. If they decide to Cut you, they will disappear from the list.</string>
    <string name="onboarding_text_4">Real Messages contain all the users that you have successfully matched with, so you can learn more about each other.</string>
    <string name="title_real">Real Review</string>
    <string name="button_tcs"><![CDATA[T&Cs]]></string>
    <string name="button_privacy">Privacy Policy</string>
    <string name="terms_prompt">Please read the terms and conditions</string>
    <string name="title_sign_up">Create Account</string>
    <string name="field_first_name">First Name</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_dob">Date of birth</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="button_facebook">Log in with Facebook</string>
    <string name="tab_login">Log in</string>
    <string name="tab_sign_up">Sign up</string>
    <string name="error_field_empty">Cannot be empty</string>
    <string name="error_field_password">Password must be at least 8 characters including one number</string>
    <string name="account_type">com.showreal.app</string>
    <string name="prompt_terms">Before accessing ShowReal, please confirm that you have reviewed our Safety Tips and Privacy Policy and that you agree to our Terms and Conditions</string>
    <string name="field_gender">Gender</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="field_height">Height</string>
    <string name="height_feet">feet</string>
    <string name="height_cm">cm</string>
    <string name="sign_up_profile">Your Profile</string>
    <string name="field_location">Home</string>
    <string name="button_login">Log in</string>
    <string name="title_login">Welcome Back</string>
    <string name="field_location_search">City name / postcode</string>
    <string name="action_done">Done</string>
    <string name="title_location">Location</string>
    <string name="button_ok">OK</string>
    <string name="title_activity_maps">Map</string>
    <string name="onboarding_disclaimer">ShowReal is now fully available for iOS and a fully featured Android version is on its way very soon. In the meantime this app will show you what\'s in store, including some exclusive content from Charlotte Crosby, the face of ShowReal.\n\nThis app will be updated as more features become available, so keep it downloaded for regular updates</string>
    <string name="onboarding_title_disclaimer">ShowReal</string>
    <string name="choose_image">Choose image</string>
    <string name="action_choose">Choose</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="alert_msg_implementation">This feature is coming soon!</string>
    <string name="title_potential">Real Potential</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Real Messages</string>
    <string name="button_keep">Keep</string>
    <string name="button_goforit">Go for it</string>
    <string name="button_second_chance">Maybe</string>
    <string name="button_maybe">Maybe</string>
    <string name="button_cut">Cut</string>
    <string name="button_safety_tips">Safety Tips</string>
    <string name="empty_notifications">No notifications to show!</string>
    <string name="profile_updated">Profile updated</string>
    <string name="alert_title_error">Unexpected Error</string>
    <string name="alert_title_facebook">Permissions error</string>
    <string name="alert_msg_facebook">For ShowReal to work, we need you to allow us to access your public profile, email address and date of birth.</string>
    <string name="button_forgot">Forgot password</string>
    <string name="forgot_password">Please enter your email below and we will send you a link to reset your password</string>
    <string name="button_send">Send</string>
    <string name="forgot_password_sent">We have sent you a link to</string>
    <string name="title_forgotten_password">Forgot Password</string>
    <string name="alert_password_title">Invalid Email</string>
    <string name="alert_password_msg">There is no user registered with this email.</string>
    <string name="alert_msg_error">There was a problem %s, please try again later.</string>
    <string name="alert_login_msg">You have entered the wrong email address or password.</string>
    <string name="alert_title_login">Login problem</string>
    <string name="alert_title_registration">Registration problem</string>
    <string name="alert_registration_email_msg">The email address chosen is not available, please try another one.</string>
    <string name="alert_title_registration_email">Email address unavailable</string>
    <string name="alert_title_profile">Profile update problem</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="alert_title_logout">Log out</string>
    <string name="alert_msg_logout">Are you sure you want to log out?</string>
    <string name="button_close">Close</string>
    <string name="pref_summary_facebook_friends">Prevent them from seeing your ShowReal profile.</string>
    <string name="pref_title_facebook_friends">Immediate Facebook Friends</string>
    <string name="pref_key_facebook_friends">facebook_friends</string>
    <string name="field_report">Message text here…</string>
    <string name="field_report_title">Report Title</string>
    <string name="alert_title_report">Talk to us</string>
    <string name="alert_msg_report">Your feedback has been successfully submitted.</string>
    <string name="alert_report_error">Due to technical issues we could not send your feedback to ShowReal. Please try again later.</string>
    <string name="alert_title_thanks">Thank you</string>
    <string name="pref_key_password_divider">change_password_divider</string>
    <string name="field_password_current">Current password</string>
    <string name="field_password_new">New password</string>
    <string name="alert_title_password">Success</string>
    <string name="alert_msg_password">Password Changed.</string>
    <string name="alert_password_incorrect">Please enter your current password correctly.</string>
    <string name="alert_password_error">Unable to change your password at this time.</string>
    <string name="alert_title_password_error">Change Password</string>
    <string name="activity_change_password">Change Password</string>
    <string name="delete_text_one">If you delete your ShowReal account, you will lose:</string>
    <string name="delete_text_two">All of the data on the Real Review and Potential Matches lists.\nAll of the data and messages from your Matches.\nYour ShowReal connection to Facebook and Instagram.</string>
    <string name="delete_text_confirm">Are you sure you want to delete your ShowReal account?</string>
    <string name="button_delete">Delete</string>
    <string name="activity_delete_account">Delete Account</string>
    <string name="alert_msg_delete">Once you have deleted your ShowReal account, it cannot be undone. Are you sure?</string>
    <string name="alert_title_error_delete">Delete problem</string>
    <string name="alert_msg_error_delete">The was a problem deleting your account, please try again later.</string>
    <string name="alert_title_facebook_connected">Account connected</string>
    <string name="alert_msg_facebook_connected">Your Facebook account has now been connected to your ShowReal account.</string>
    <string name="field_dob_short">D.O.B</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="alert_title_logged_out">Logged Out</string>
    <string name="alert_msg_expired">Your login session has expired. Please log in again.</string>
    <string name="empty_reviews">No users have been found matching your preferences!</string>
    <string name="reviews_header_primary">Users who matched your search criteria</string>
    <string name="reviews_header_secondary">Users that found you that may have liked you</string>
    <string name="action_preferences">Preferences</string>
    <string name="gender_both">both</string>
    <string name="preferences_hint">I\'m looking for</string>
    <string name="field_age_range">Age range</string>
    <string name="title_review_preferences">Preferences</string>
    <string name="field_location_reviews">Location</string>
    <string name="alert_title_error_oops">Oops</string>
    <string name="alert_msg_preferences">Can\'t update your profile at this time, try again later</string>
    <string name="location_home">Home</string>
    <string name="location_search">Search</string>
    <string name="location_follow">Follow me</string>
    <string name="action_delete_all">Delete all</string>
    <string name="notification_deleted">Deleted %s</string>
    <string name="button_undo">Undo</string>
    <string name="notifications_deleted">Notifications deleted</string>
    <string name="alert_title_remove_notifications">Delete notifications</string>
    <string name="alert_msg_remove_notifications">All notifications will be deleted.</string>
    <string name="status_signal">No Signal</string>
    <string name="status_signal_message">We are unable to complete your request a there is no internet connection.</string>
    <string name="title_failed_connection">Fail to Connect</string>
    <string name="button_instagram">Connect to Instagram</string>
    <string name="instagram_id">3eae913ffc5c409a86025926a8bada55</string>
    <string name="instagram_redirect_url">https://api.showreal.com/api/sessions/authorize_instagram</string>
    <string name="activity_instagram_login">Instagram Login</string>
    <string name="profile_instagram">More about you</string>
    <string name="activity_photo">Instagram Photo</string>
    <string name="button_disconnect_instagram">Disconnect Instagram</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="alert_title_disconnect_instagram">Disconnect Instagram</string>
    <string name="alert_msg_disconnect_instagram">Are you sure?</string>
    <string name="last_online">last online:</string>
    <string name="instagram_user">More about you</string>
    <string name="instagram_other">More about %s</string>
    <string name="activity_profile">Profile</string>
    <string name="button_report">Report user</string>
    <string name="action_profile">See profile</string>
    <string name="action_unmatch">Unmatch user</string>
    <string name="action_report">Report user</string>
    <string name="label_or">OR</string>
</resources>