<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_action_menu"
        android:orderInCategory="201"
        android:title="Menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_profile"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/action_profile"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_unmatch"
                android:icon="@drawable/ic_action_unmatch"
                android:title="@string/action_unmatch"/>

            <item
                android:id="@+id/action_report"
                android:icon="@drawable/ic_warning_red_24dp"
                android:title="@string/action_report"/>
        </menu>
    </item>
</menu>