<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/activity_forgot_password">

    <data>

        <variable
            name="viewModel"
            type="com.showreal.app.features.onboarding.signup.ForgottenPasswordViewModel"/>
    </data>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text"
            style="@style/TextAppearance.ShowReal.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="54dp"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/forgot_password"
            app:font="@{@string/FontBody1}"
            app:layout_widthPercent="70%"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            app:font="@{@string/FontBody1}"
            app:layout_widthPercent="75%">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_email"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{viewModel::onEmailChanged}"
                android:textAppearance="@style/TextAppearance.ShowReal.SubHead"
                app:font="@{@string/FontBody1}"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_send"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{viewModel::onSend}"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/button_send"
            android:textAppearance="@style/TextAppearance.ShowReal.Button"
            android:textColor="@color/red"
            app:font="@{@string/FontButton}"
            app:layout_widthPercent="50%"/>


    </android.support.percent.PercentRelativeLayout>
</layout>